[gd_scene load_steps=6 format=2]

[ext_resource path="res://lib/ui/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/0x72_DungeonTilesetII_v1.4/0x72_DungeonTilesetII_v1.4/frames/chest_empty_open_anim_f2.png" type="Texture" id=2]
[ext_resource path="res://assets/Frame_mid_2.png" type="Texture" id=3]
[ext_resource path="res://lib/ui/InventoryContainer.gd" type="Script" id=4]
[ext_resource path="res://lib/ui/InventoryItemIcon.tscn" type="PackedScene" id=5]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 426.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer/HBoxContainer/MarginContainer"]

[node name="MenuItems" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/NinePatchRect"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 14.0
text = "0"

[node name="InventoryIconContainer" type="MarginContainer" parent="."]
anchor_top = 0.909
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryIconContainer"]
margin_right = 426.0
margin_bottom = 21.0

[node name="MarginContainer" type="MarginContainer" parent="InventoryIconContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 21.0

[node name="NinePatchRect" type="NinePatchRect" parent="InventoryIconContainer/HBoxContainer/MarginContainer"]
margin_right = 20.0
margin_bottom = 21.0
texture = ExtResource( 3 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="InventoryIconContainer/HBoxContainer/MarginContainer"]
margin_right = 20.0
margin_bottom = 21.0
texture = ExtResource( 2 )

[node name="InventoryContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -197.0
margin_right = 165.0
margin_bottom = -25.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="InventoryContainer"]
margin_right = 155.0
margin_bottom = 172.0
color = Color( 0.505882, 0.505882, 0.505882, 0.403922 )

[node name="GridContainer" type="GridContainer" parent="InventoryContainer/ColorRect"]
margin_right = 40.0
margin_bottom = 40.0

[node name="InventoryItemIcon" parent="InventoryContainer/ColorRect/GridContainer" instance=ExtResource( 5 )]

[connection signal="mouse_entered" from="InventoryIconContainer/HBoxContainer/MarginContainer/TextureRect" to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="InventoryContainer" to="." method="_on_InventoryContainer_mouse_exited"]
[connection signal="mouse_exited" from="InventoryContainer/ColorRect" to="." method="_on_ColorRect_mouse_exited"]
